test/error/rtc/con2.rzy
// error: loop in connection graph for sub

component
  Dummy
    input
      in();
      
    output
      out();
      
  implementation elementary
    function in()
      out();
    end
  end

  Con2
    input
      in();
      
    output
      out();
      
  implementation composition
    component
      sub1 : Dummy;
      sub2 : Dummy;
      
    connection
      in -> out;
      sub1.out -> sub2.in;
      sub2.out -> sub1.in;
      
  end

